@@ -1,3 +1,12 @@
+2020-07-24  Keith Marshall  <keith@users.osdn.me>
+
+	Publish MinGW.org WSL-5.4.1 package set.
+
+	* mingw32/mingw32-runtime.xml (mingwrt-5.4.1-dev, mingwrt-5.4.1-dll)
+	(mingwrt-5.4.1-lic, mingwrt-5.4.1-man, libmingwex-5.3.4.1-dll-4)
+	(libmingwex-5.4.1-dev, w32api-5.4.1-dev): Add references.
+	* common/issue.log mingw32/issue.log: Update accordingly.
+
 2020-07-11  Keith Marshall  <keith@users.osdn.me>
 
 	Update GCC-9.2 to remove obsolete dependencies.
